# nbody

./: .gitignore  Cargo.toml  initial_conditions.json  solar_system.json
src/: main.rs  sim.rs
