[package]
name = "nbody"
version = "0.1.0"
edition = "2024"
default-run = "nbody"

[dependencies]
macroquad = "0.4"
nalgebra = { version = "0.33", features = ["rayon"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[profile.perf]
inherits = "release"
debug = true
